src/objects/Job_Rate_Plan_Charge__c.object
<CustomObject>
    <fields>
        <fullName>VSOE_Index__c</fullName>
        <label>VSOE Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VSOE_Package_Total__c</fullName>
        <label>VSOE Package Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSOE_Pricing__c</fullName>
        <label>VSOE Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSOE_Total__c</fullName>
        <label>VSOE Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_Net_Total__c</fullName>
        <label>Year 1 Net Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_Row_Total__c</fullName>
        <label>Year 1 Row Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_VAT__c</fullName>
        <label>Year 1 VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_Net_Total__c</fullName>
        <formula>IF(Subscription_Product__c,(Year_1_Net_Total__c +(Year_1_Net_Total__c *  Uplift__c)), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_Row_Total__c</fullName>
        <formula>IF( Subscription_Product__c, ( Year_2_Net_Total__c + Year_2_VAT__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Row Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_VAT__c</fullName>
        <formula>IF(Subscription_Product__c,(Year_2_Net_Total__c * VAT_Percentage__c ), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_Net_Total__c</fullName>
        <formula>IF(Subscription_Product__c,(Year_2_Net_Total__c +(Year_2_Net_Total__c * Uplift__c)), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_Row_Total__c</fullName>
        <formula>IF( Subscription_Product__c, ( Year_3_Net_Total__c + Year_3_VAT__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Row Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_VAT__c</fullName>
        <formula>IF(Subscription_Product__c,(Year_3_Net_Total__c * VAT_Percentage__c), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order Rate Plan Charge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Rate Plan Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>